@@ -1,3 +1,7 @@
+2009-01-05  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-04-10
+        * Fix for Savannah bug #45532
+
 2008-11-28 Andrea Neusiedl <andrea.neusiedl@cern.ch>
 	* Tag as TrigT1CaloMonitoring-00-04-09
 	* checkreq fix
